k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cashew-capital
  labels:
    app: cashew-capital
