k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashew-frontend
  namespace: cashew-capital
  labels:
    app: cashew-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cashew-frontend
  template:
    metadata:
      labels:
        app: cashew-frontend
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: cashew-frontend
          # Pulled from Amazon ECR
          image: 852845752811.dkr.ecr.us-east-1.amazonaws.com/cashew-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
